--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
 
           <div class="content__controls">
-            <button type="button" class="content__control" onclick="location.href='./pages/category.html';">заполнить форму</button>
+            <button type="button" class="content__control" onclick="location.href='./pages/pick-category.html';">заполнить форму</button>
           </div>
         </div>
       </main>
