--- a/pages/other-form.html
+++ b/pages/other-form.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Категория Кафе/бар/ресторан - Укажите контакты и часы работы</title>
-    <link rel="stylesheet" href="./cafe-contacts.css" />
+    <title>Гедонизмфест</title>
+    <link rel="stylesheet" href="./other-form.css" />
   </head>
-
   <body class="container">
     <div class="page">
       <header class="header">
@@ -47,37 +46,60 @@
         <h1 class="content__title content__title_hideable">стать участником</h1>
         <div class="form">
           <div class="form__container">
-            <p class="form__step">шаг 3 из 4</p>
+            <p class="form__step">шаг 2 из 4</p>
             <div class="form__instruction">
-              <p class="form__heading">укажите контакты и часы работы</p>
+              <p class="form__heading">заполните форму</p>
               <div class="form__paragraphs">
-                <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
+                <p class="form__paragraph">Организуйте свою посиделку, вечеринку или концерт.</p>
+                <p class="form__paragraph">Пригласите друзей и тех, кто захочет помочь Ночлежке.</p>
+                <p class="form__paragraph">Установите пожертвование, например кусочек пирога за любую комфортную сумму.</p>
               </div>
             </div>
 
-            <form class="form__form" id="cafe-contacts-form" name="cafe-contacts-form">
-              <fieldset class="form__labeled-container form__labeled-container_place_form">
+            <form class="form__form" id="other-form" action="other-contacts.html" name="other-form">
+              <div class="form__input-container form__bottom-line">
+                <div class="form-input form-input_active form-input_place_forms">
+                  <span>другое</span>
+                  <div class="form-input__checker form-input__checker_checked"></div>
+                </div>
+              </div>
+
+              <fieldset class="form__radio-block form__bottom-line">
+                <div class="form__radio-container">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon form__radio-icon_checked"></span>
+                    <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
+                    <span>онлайн</span>
+                  </label>
+                </div>
+                <div class="form__radio-container">
+                  <label class="form__radio-unit">
+                    <span class="form__radio-icon"></span>
+                    <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
+                    <span>оффлайн</span>
+                  </label>
+                </div>
+              </fieldset>
+
+              <fieldset class="form__labeled-container">
                 <div class="form__unit">
-                  <label class="form__label" for="cafe-work-hours">часы работы заведения</label>
-                  <input
-                    class="form__field"
-                    id="cafe-work-hours"
-                    name="cafe-work-hours"
-                    type="text"
-                    placeholder="например: 10:00-13:00, 13:00-19:00"
-                    onkeyup="clearErrors(this)"
-                  />
+                  <label class="form__label">город</label>
+                  <select class="form__field form__list" onfocus="clearErrors(this)" id="other-city" name="other-city">
+                    <option value="" style="display: none">выберите из списка</option>
+                    <option>Москва</option>
+                    <option>Санкт-Петербург</option>
+                  </select>
                   <span class="form__error"></span>
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="cafe-address">адрес заведения</label>
+                  <label class="form__label" for="event-name">название мероприятия</label>
                   <input
                     class="form__field"
-                    id="cafe-address"
-                    name="cafe-address"
+                    id="event-name"
+                    name="event-name"
                     type="text"
-                    placeholder="каждый адрес с новой строки"
+                    placeholder="введите название мероприятия"
                     value=""
                     onkeyup="clearErrors(this)"
                   />
@@ -85,7 +107,35 @@
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="contact-number">номер телефона заведения</label>
+                  <label class="form__label" for="event-date">дата проведения</label>
+                  <input
+                    class="form__field"
+                    id="event-date"
+                    name="event-date"
+                    type="text"
+                    placeholder="укажите дату в формате дд.мм.гггг"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-name">контактное лицо</label>
+                  <input
+                    class="form__field"
+                    id="contact-name"
+                    name="contact-name"
+                    type="text"
+                    placeholder="введите ФИО"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
                   <input
                     class="form__field"
                     id="contact-number"
@@ -98,48 +148,16 @@
                   />
                   <span class="form__error"></span>
                 </div>
-
-                <div class="form__unit">
-                  <label class="form__label" for="contact-number">ссылка на сайт</label>
-                  <input class="form__field" id="cafe-site" type="text" name="cafe-site" value="https://" onkeyup="clearErrors(this)" />
-                  <span class="form__error"></span>
-                </div>
-
-                <div class="form__unit">
-                  <label class="form__label" for="contact-number">ссылки на соцсети</label>
-                  <input
-                    class="form__field"
-                    id="cafe-social-links"
-                    name="cafe-social-links"
-                    type="text"
-                    placeholder="каждую ссылку с новой строки"
-                    value=""
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
-
-                <div class="form__unit">
-                  <label class="form__label" for="event-description">описание</label>
-                  <textarea
-                    class="form__field form-input form__textarea form__textarea_size_l"
-                    id="event-description"
-                    name="event-description"
-                    placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
-                    cols="30"
-                    rows="3"
-                    onkeyup="clearErrors(this)"
-                  ></textarea>
-                  <span class="form__error"></span>
-                </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form__control" onclick="location.href='cafe-form.html';">назад</button>
+            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='pick-category.html';">
+              назад
+            </button>
             <button
               type="submit"
-              form="cafe-contacts-form"
+              form="other-form"
               class="form__control_type_submit form-input form__control form__control_active"
             ></button>
           </div>
