--- a/pages/party-contacts.html
+++ b/pages/party-contacts.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="./master-class.css" />
+    <link rel="stylesheet" href="./party-contacts.css" />
   </head>
   <body class="container">
     <div class="page">
@@ -46,58 +46,24 @@
         <h1 class="content__title content__title_hideable">стать участником</h1>
         <div class="form">
           <div class="form__container">
-            <p class="form__step">шаг 2 из 4</p>
+            <p class="form__step">шаг 3 из 4</p>
             <div class="form__instruction">
-              <p class="form__heading">заполните форму</p>
+              <p class="form__heading">укажите контакты и часы работы</p>
               <div class="form__paragraphs">
-                <p class="form__paragraph">Определитесь с типом мероприятия — лекция, консультация или мастер-класс.</p>
-                <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
+                <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
               </div>
             </div>
-            <form class="form__form" id="master-class" action="master-class_Step3.html" name="category__form">
-              <div class="form__input-container form__bottom-line">
-                <div class="form-input form-input_active form-input_place_forms">
-                  <span>мастер-класс/лекция</span>
-                  <div class="form-input__checker form-input__checker_checked"></div>
-                </div>
-              </div>
 
-              <fieldset class="form__radio-block form__bottom-line">
-                <div class="form__radio-container">
-                  <label class="form__radio-unit">
-                    <span class="form__radio-icon form__radio-icon_checked"></span>
-                    <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
-                    <span>онлайн</span>
-                  </label>
-                </div>
-                <div class="form__radio-container">
-                  <label class="form__radio-unit">
-                    <span class="form__radio-icon"></span>
-                    <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
-                    <span>оффлайн</span>
-                  </label>
-                </div>
-              </fieldset>
-
-              <fieldset class="form__labeled-container">
+            <form class="form__form" id="party-contacts" name="party-contacts">
+              <fieldset class="form__labeled-container form__labeled-container_place_form">
                 <div class="form__unit">
-                  <label class="form__label">город</label>
-                  <select class="form__field form__list" onfocus="clearErrors(this)">
-                    <option value="" style="display: none">выберите из списка</option>
-                    <option>Москва</option>
-                    <option>Санкт-Петербург</option>
-                  </select>
-                  <span class="form__error"></span>
-                </div>
-
-                <div class="form__unit">
-                  <label class="form__label" for="event-name">название мероприятия</label>
+                  <label class="form__label" for="event-clock">время проведения</label>
                   <input
                     class="form__field"
-                    id="event-name"
+                    id="event-clock"
+                    name="event-clock"
                     type="text"
-                    name="event-name"
-                    placeholder="введите название"
+                    placeholder="например: 18:00-22:00"
                     value=""
                     onkeyup="clearErrors(this)"
                   />
@@ -105,13 +71,13 @@
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="event-date">дата проведения</label>
+                  <label class="form__label" for="event-address">адрес проведения</label>
                   <input
                     class="form__field"
-                    id="event-date"
+                    id="event-address"
+                    name="event-address"
                     type="text"
-                    name="event-date"
-                    placeholder="укажите дату в формате дд.мм.гггг"
+                    placeholder="каждый адрес с новой строки"
                     value=""
                     onkeyup="clearErrors(this)"
                   />
@@ -119,26 +85,12 @@
                 </div>
 
                 <div class="form__unit">
-                  <label class="form__label" for="contact-name">контактное лицо</label>
-                  <input
-                    class="form__field"
-                    id="contact-name"
-                    type="text"
-                    name="contact-name"
-                    placeholder="введите ФИО"
-                    value=""
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
-
-                <div class="form__unit">
-                  <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
+                  <label class="form__label" for="contact-number">номер телефона для бронирования</label>
                   <input
                     class="form__field"
                     id="contact-number"
-                    type="tel"
                     name="contact-number"
+                    type="tel"
                     value="+7 ("
                     oninput="formatPhone(event, this)"
                     onblur="validatePhone(this)"
@@ -146,17 +98,70 @@
                   />
                   <span class="form__error"></span>
                 </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="participate-price">стоимость участия</label>
+                  <input
+                    class="form__field"
+                    id="participate-price"
+                    name="participate-price"
+                    type="text"
+                    placeholder="укажите стоимость в рублях"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="contact-website">ссылка на сайт</label>
+                  <input
+                    class="form__field"
+                    id="contact-website"
+                    name="contact-website"
+                    type="text"
+                    value="https://"
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="party-links">ссылки на соцсети</label>
+                  <input
+                    class="form__field"
+                    id="party-links"
+                    name="party-links"
+                    type="text"
+                    placeholder="каждую ссылку с новой строки"
+                    value=""
+                    onkeyup="clearErrors(this)"
+                  />
+                  <span class="form__error"></span>
+                </div>
+
+                <div class="form__unit">
+                  <label class="form__label" for="event-description">описание</label>
+                  <textarea
+                    class="form__field form-input form__textarea form__textarea_size_m"
+                    name="event-description"
+                    id="event-description"
+                    placeholder="Напишите небольшой анонс вашего мероприятия. Чем оно будет полезно/чему посвящено"
+                    onkeyup="clearErrors(this)"
+                  ></textarea>
+                  <span class="form__error"></span>
+                </div>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form-input form__control form__control_type_back" onclick="location.href='./category.html';">
+            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='party-form.html';">
               назад
             </button>
             <button
               type="submit"
-              form="master-class"
-              class="form-input form__control form__control_active form__control_type_submit"
+              form="party-contacts"
+              class="form__control_type_submit form-input form__control form__control_active"
             ></button>
           </div>
         </div>
@@ -213,7 +218,6 @@
         </div>
       </footer>
     </div>
-    <script src="../scripts/script.js"></script>
     <script src="../scripts/form-validator.js"></script>
   </body>
 </html>
