--- a/pages/pick-category.html
+++ b/pages/pick-category.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гедонизмфест</title>
-    <link rel="stylesheet" href="./other-form_step3.css" />
+    <link rel="stylesheet" href="./pick-category.css" />
   </head>
   <body class="container">
     <div class="page">
@@ -42,98 +42,52 @@
         </div>
       </header>
 
-      <main class="content">
+      <main class="content content_place_category">
         <h1 class="content__title content__title_hideable">стать участником</h1>
         <div class="form">
           <div class="form__container">
-            <p class="form__step">шаг 3 из 4</p>
+            <p class="form__step">шаг 1 из 4</p>
             <div class="form__instruction">
-              <p class="form__heading">укажите контакты и часы работы</p>
-              <div class="form__paragraphs">
-                <p class="form__paragraph">Эти данные появятся в описании карточки вашего мероприятия в нашем каталоге событий</p>
-              </div>
+              <p class="form__heading">выберите категорию</p>
             </div>
-            <form class="form__form" id="otherContacts" name="category__form">
-              <fieldset class="form__labeled-container form__labeled-container_place_form">
-                <div class="form__unit">
-                  <label class="form__label" for="other-clock">время проведения</label>
-                  <input
-                    class="form__field"
-                    id="other-clock"
-                    type="text"
-                    name="other-clock"
-                    placeholder="например: 18:00-22:00"
-                    value=""
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
 
-                <div class="form__unit">
-                  <label class="form__label" for="other-address">адрес проведения</label>
-                  <input
-                    class="form__field"
-                    id="other-address"
-                    type="text"
-                    name="other-address"
-                    placeholder="каждый адрес с новой строки"
-                    value=""
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
+            <form class="form__form" id="pick-category" name="pick-category">
+              <fieldset class="form__input-container form__category">
+                <label class="form-input radio-button">
+                  <input class="form__radio" type="radio" name="category_cafe" value="cafe" />
+                  <span>кафе/бар/ресторан</span>
+                  <span class="form-input__checker"></span>
+                </label>
 
-                <div class="form__unit">
-                  <label class="form__label" for="contact-number">номер телефона для бронирования</label>
-                  <input
-                    class="form__field"
-                    id="contact-number"
-                    type="tel"
-                    name="contact-number"
-                    value="+7 ("
-                    oninput="formatPhone(event, this)"
-                    onblur="validatePhone(this)"
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
+                <label class="form-input radio-button">
+                  <input class="form__radio" type="radio" name="category_master-class" value="master-class" />
+                  <span>мастер-класс/лекция</span>
+                  <span class="form-input__checker"></span>
+                </label>
 
-                <div class="form__unit">
-                  <label class="form__label" for="participate-price">стоимость участия</label>
-                  <input
-                    class="form__field"
-                    id="participate-price"
-                    type="text"
-                    name="participate-price"
-                    placeholder="укажите стоимость в рублях"
-                    value=""
-                    onkeyup="clearErrors(this)"
-                  />
-                  <span class="form__error"></span>
-                </div>
+                <label class="form-input radio-button">
+                  <input class="form__radio" type="radio" name="category_party" value="party" />
+                  <span>посиделки/вечеринка</span>
+                  <span class="form-input__checker"></span>
+                </label>
 
-                <div class="form__unit">
-                  <label class="form__label" for="other-description">описание</label>
-                  <textarea
-                    class="form__field form-input form__textarea form__textarea_size_l"
-                    name="other-description"
-                    id="other-description"
-                    placeholder="Напишите небольшое приглашение своим посетителям. Людям нравятся простые обращения, дружественный тон"
-                    onkeyup="clearErrors(this)"
-                  ></textarea>
-                  <span class="form__error"></span>
-                </div>
+                <label class="form-input radio-button">
+                  <input class="form__radio" type="radio" name="category_other" value="other" />
+                  <span>другое</span>
+                  <span class="form-input__checker"></span>
+                </label>
               </fieldset>
             </form>
           </div>
           <div class="form__controls">
-            <button type="button" class="form__control_type_back form-input form__control" onclick="location.href='other.html';">
-              назад
+            <button type="button" class="form-input form__control form__control_type_back" onclick="location.href='../index.html';">
+              отмена
             </button>
             <button
               type="submit"
-              form="otherContacts"
-              class="form__control_type_submit form-input form__control form__control_active"
+              id="category-submit"
+              form="pick-category"
+              class="form-input form__control form__control_type_submit"
             ></button>
           </div>
         </div>
@@ -190,6 +144,6 @@
         </div>
       </footer>
     </div>
-    <script src="../scripts/form-validator.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
