hotfix(markers): fix marker dot

--- a/pages/cafe-form.html
+++ b/pages/cafe-form.html
@@ -52,9 +52,9 @@
               <div class="form__paragraphs">
                 <p class="form__paragraph">Для участия вы можете выбрать:</p>
                 <ul class="form__paragraph form__paragraph_type_list">
-                  <li><span class="form__paragraph">определенную позицию из меню</span></li>
-                  <li><span class="form__paragraph">группу позиций</span></li>
-                  <li><span class="form__paragraph">процент от продаж определенных позиций или всего меню</span></li>
+                  <li class="form__paragraph_type_list-item">определенную позицию из меню</li>
+                  <li class="form__paragraph_type_list-item">группу позиций</li>
+                  <li class="form__paragraph_type_list-item">процент от продаж определенных позиций или всего меню</li>
                 </ul>
               </div>
             </div>
