fix: добавить единое имя для инпутов радио, реализовать переключение классов средствами CSS

--- a/pages/master-class-form.html
+++ b/pages/master-class-form.html
@@ -66,15 +66,15 @@
               <fieldset class="form__radio-block form__bottom-line">
                 <div class="form__radio-container">
                   <label class="form__radio-unit">
+                    <input class="form__radio" type="radio" id="master-class-public" name="master-class-radio" value="public" checked/>
                     <span class="form__radio-icon form__radio-icon_checked"></span>
-                    <input class="form__radio" type="radio" id="master-class-public" name="master-class-public" value="public" />
                     <span>онлайн</span>
                   </label>
                 </div>
                 <div class="form__radio-container">
                   <label class="form__radio-unit">
+                    <input class="form__radio" type="radio" id="master-class-private" name="master-class-radio" value="private" />
                     <span class="form__radio-icon"></span>
-                    <input class="form__radio" type="radio" id="master-class-private" name="master-class-private" value="private" />
                     <span>оффлайн</span>
                   </label>
                 </div>
