--- a/pages/other-form.html
+++ b/pages/other-form.html
@@ -67,15 +67,15 @@
               <fieldset class="form__radio-block form__bottom-line">
                 <div class="form__radio-container">
                   <label class="form__radio-unit">
+                    <input class="form__radio" type="radio" id="party-public" name="other-radio" value="public" checked/>
                     <span class="form__radio-icon form__radio-icon_checked"></span>
-                    <input class="form__radio" type="radio" id="party-public" name="party-public" value="public" />
                     <span>онлайн</span>
                   </label>
                 </div>
                 <div class="form__radio-container">
                   <label class="form__radio-unit">
+                    <input class="form__radio" type="radio" id="party-private" name="other-radio" value="private" />
                     <span class="form__radio-icon"></span>
-                    <input class="form__radio" type="radio" id="party-private" name="party-private" value="private" />
                     <span>оффлайн</span>
                   </label>
                 </div>
