--- a/pages/master-class-form.html
+++ b/pages/master-class-form.html
@@ -111,7 +111,7 @@
                     class="form__field"
                     id="event-date"
                     name="event-date"
-                    type="text"
+                    type="date"
                     placeholder="укажите дату в формате дд.мм.гггг"
                     value=""
                     onkeyup="clearErrors(this)"
