fix: реализовать стилизацию и валидацию выпадающего списка

--- a/pages/cafe-form.html
+++ b/pages/cafe-form.html
@@ -70,10 +70,15 @@
               <fieldset class="form__labeled-container">
                 <div class="form__unit">
                   <label class="form__label" for="cafe-city">город</label>
-                  <select class="form__field form__list" onfocus="clearErrors(this)" id="cafe-city" name="cafe-city">
+                  <p class="form__fake-select form__list">выберите из списка</p>
+                  <ul class="form__select">
+                    <li class="form__select-item">Москва</li>
+                    <li class="form__select-item">Санкт-Петербург</li>
+                  </ul>
+                  <select class="form__select form__field" onfocus="clearErrors(this)" id="cafe-city" name="cafe-city">
                     <option value="" style="display: none">выберите из списка</option>
-                    <option>Москва</option>
-                    <option>Санкт-Петербург</option>
+                    <option value="Москва">Москва</option>
+                    <option value="Санкт-Петербург">Санкт-Петербург</option>
                   </select>
                   <span class="form__error"></span>
                 </div>
@@ -196,5 +201,7 @@
       </footer>
     </div>
     <script src="../scripts/form-validator.js"></script>
+    <script src="../scripts/select.js"></script>
+
   </body>
 </html>
