--- a/pages/party-form.html
+++ b/pages/party-form.html
@@ -67,10 +67,15 @@
               <fieldset class="form__labeled-container form__bottom-line">
                 <div class="form__unit">
                   <label class="form__label">город</label>
-                  <select class="form__field form__city-list" onfocus="clearErrors(this)" id="party-city" name="party-city">
+                  <p class="form__fake-select form__list">выберите из списка</p>
+                  <ul class="form__select">
+                    <li class="form__select-item">Москва</li>
+                    <li class="form__select-item">Санкт-Петербург</li>
+                  </ul>
+                  <select class="form__select form__field" onfocus="clearErrors(this)" id="party-city" name="party-city">
                     <option value="" style="display: none">выберите из списка</option>
-                    <option>Москва</option>
-                    <option>Санкт-Петербург</option>
+                    <option value="Москва">Москва</option>
+                    <option value="Санкт-Петербург">Санкт-Петербург</option>
                   </select>
                   <span class="form__error"></span>
                 </div>
@@ -223,5 +228,6 @@
     </div>
     <script src="../scripts/script.js"></script>
     <script src="../scripts/form-validator.js"></script>
+    <script src="../scripts/select.js"></script>
   </body>
 </html>
